# DevMind

./: .env.example  .gitignore  AGENTS.md  README.md
deploy/: .env.example  README.md
devmind-ai-worker/: .env.example  README.md  pyproject.toml
devmind-ai-worker/app/: __init__.py  main.py
devmind-ai-worker/app/api/: __init__.py
devmind-ai-worker/app/providers/: __init__.py  base.py  registry.py
devmind-ai-worker/app/tools/: __init__.py  contracts.py
devmind-ai-worker/app/trace/: __init__.py  models.py
devmind-ai-worker/tests/: conftest.py  test_app.py  test_provider_registry.py
devmind-backend/: README.md  pom.xml
devmind-frontend/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
devmind-frontend/src/: main.js
devmind-frontend/src/__tests__/: AppShell.test.js  agentTraces.test.js  chatSessions.test.js  codeAnalysis.test.js  knowledgeBases.test.js  modelConfigurations.test.js  reports.test.js
devmind-frontend/src/api/: agentTraces.js  chatSessions.js  codeAnalysis.js  http.js  knowledgeBases.js  modelConfigurations.js  reports.js
devmind-frontend/src/layouts/: AppLayout.vue
devmind-frontend/src/router/: index.js
devmind-frontend/src/stores/: agentTraces.js  auth.js  chatSessions.js  codeAnalysis.js  knowledgeBases.js  modelConfigurations.js  reports.js
devmind-frontend/src/styles/: main.scss
devmind-frontend/src/views/: AgentTracePage.vue  ChatPage.vue  CodeAnalysisPage.vue  DocumentStatusPage.vue  KnowledgeBaseDetailPage.vue  KnowledgeBasePage.vue  LoginPage.vue  ReportDetailPage.vue  (+3 more)
(+142 files in other folders)
