[project]
name = "devmind-ai-worker"
version = "0.1.0"
description = "DevMind AI worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0"
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0"
]

[tool.uv]
package = false
